--- a/Numpy_practice/practice.ipynb
+++ b/Numpy_practice/practice.ipynb
@@ -398,7 +398,7 @@
     "a = np.array([1, 2, 3])\n",
     "b = np.array([1, 5, 7])\n",
     "\n",
-    "print(\"A greater or equal than B ?\", a >= b)"
+    "print(\"A greater or equal than B ?\", a >= b)\n"
    ],
    "metadata": {
     "collapsed": false
